@@ -474,113 +474,76 @@ public class CoffeeTime extends StdLibrary implements TimeManager
         return date2String(C);
     }
 
-    public String date2LongEllapsedTime(long time)
+    public String date2EllapsedTime(long time, TimeUnit minUnit, boolean shortest)
     {
     	StringBuilder str=new StringBuilder("");
     	if(time > (TimeManager.MILI_YEAR))
     	{
     		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_YEAR));
     		time = time % TimeManager.MILI_YEAR;
-    		str.append(num+" year(s), ");
+    		str.append(num+(shortest?"y":" year(s)"));
     	}
     	if(time > (TimeManager.MILI_MONTH))
     	{
+        	if(str.length()>0) str.append(shortest?" ":", ");
     		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_MONTH));
     		time = time % TimeManager.MILI_MONTH;
-    		str.append(num+" month(s), ");
+    		str.append(num+(shortest?"M":" month(s)"));
     	}
     	if(time > (TimeManager.MILI_WEEK))
     	{
+        	if(str.length()>0) str.append(shortest?" ":", ");
     		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_WEEK));
     		time = time % TimeManager.MILI_WEEK;
-    		str.append(num+" week(s), ");
+    		str.append(num+(shortest?"w":" week(s)"));
     	}
     	if(time > (TimeManager.MILI_DAY))
     	{
+        	if(str.length()>0) str.append(shortest?" ":", ");
     		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_DAY));
     		time = time % TimeManager.MILI_DAY;
-    		str.append(num+" day(s), ");
-    	}
-    	if(time > (TimeManager.MILI_HOUR))
-    	{
-    		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_HOUR));
-    		time = time % TimeManager.MILI_HOUR;
-    		str.append(num+" hour(s), ");
-    	}
-    	if(time > (TimeManager.MILI_MINUTE))
-    	{
-    		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_MINUTE));
-    		time = time % TimeManager.MILI_MINUTE;
-    		str.append(num+" minute(s), ");
-    	}
-    	if(time > (TimeManager.MILI_SECOND))
-    	{
-    		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_SECOND));
-    		time = time % TimeManager.MILI_SECOND;
-    		str.append(num+" seconds(s), ");
-    	}
-    	if(str.length()>0)
-    		return str.substring(0,str.length()-2);
-    	return time+" milliseconds";
-    }
-    
-    public String date2ShortEllapsedTime(long time)
-    {
-    	return date2ShortEllapsedTime(time, TimeUnit.MILLISECONDS);
-    }
-    
-    public String date2ShortEllapsedTime(long time, TimeUnit minUnit)
-    {
-    	StringBuilder str=new StringBuilder("");
-    	if(time > (TimeManager.MILI_YEAR))
-    	{
-    		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_YEAR));
-    		time = time % TimeManager.MILI_YEAR;
-    		str.append(num+"y ");
-    	}
-    	if(time > (TimeManager.MILI_MONTH))
-    	{
-    		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_MONTH));
-    		time = time % TimeManager.MILI_MONTH;
-    		str.append(num+"M ");
-    	}
-    	if(time > (TimeManager.MILI_WEEK))
-    	{
-    		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_WEEK));
-    		time = time % TimeManager.MILI_WEEK;
-    		str.append(num+"w ");
-    	}
-    	if(time > (TimeManager.MILI_DAY))
-    	{
-    		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_DAY));
-    		time = time % TimeManager.MILI_DAY;
-    		str.append(num+"d ");
+    		str.append(num+(shortest?"d":" day(s)"));
     	}
     	if(minUnit == TimeUnit.DAYS) return str.toString().trim();
     	if(time > (TimeManager.MILI_HOUR))
     	{
+        	if(str.length()>0) str.append(shortest?" ":", ");
     		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_HOUR));
     		time = time % TimeManager.MILI_HOUR;
-    		str.append(num+"h ");
+    		str.append(num+(shortest?"h":" hour(s)"));
     	}
     	if(minUnit == TimeUnit.HOURS) return str.toString().trim();
     	if(time > (TimeManager.MILI_MINUTE))
     	{
+        	if(str.length()>0) str.append(shortest?" ":", ");
     		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_MINUTE));
     		time = time % TimeManager.MILI_MINUTE;
-    		str.append(num+"m ");
+    		str.append(num+(shortest?"m":" minute(s)"));
     	}
     	if(minUnit == TimeUnit.MINUTES) return str.toString().trim();
     	if(time > (TimeManager.MILI_SECOND))
     	{
+        	if(str.length()>0) str.append(shortest?" ":", ");
     		int num=(int)Math.round(CMath.div(time,TimeManager.MILI_SECOND));
     		time = time % TimeManager.MILI_SECOND;
-    		str.append(num+"s ");
+    		str.append(num+(shortest?"s":" second(s)"));
     	}
     	if(minUnit == TimeUnit.SECONDS) return str.toString().trim();
-    	if(str.length()>0)
-    		return str.substring(0,str.length()-1);
-    	return time+"ms";
+    	if(str.length()>0) str.append(shortest?" ":", ");
+    	return time+(shortest?"ms":" milliseconds");
+    }
+    
+    public String date2SmartEllapsedTime(long time, boolean shortest)
+    {
+    	if(time > TimeManager.MILI_DAY*2)
+    		return date2EllapsedTime(time,TimeUnit.DAYS,shortest);
+    	if(time > TimeManager.MILI_HOUR*2)
+    		return date2EllapsedTime(time,TimeUnit.HOURS,shortest);
+    	if(time > TimeManager.MILI_MINUTE*2)
+    		return date2EllapsedTime(time,TimeUnit.MINUTES,shortest);
+    	if(time > TimeManager.MILI_SECOND*2)
+    		return date2EllapsedTime(time,TimeUnit.SECONDS,shortest);
+		return date2EllapsedTime(time,null,shortest);
     }
     
     public String date2SecondsString(long time)
