@@ -2309,4 +2309,6 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 1. Bug Fix worth mentioning: custom mxp images restored
 2. AutoMapping system available -- see AWARERANGE in INI file and Control Panel
 3. Can now create/destroy/list debugflag and disableflag (same as debug= disable= in coffeemud.ini file -- changes are TEMPORARY!)
-
+4. Channel Commands by themselves now automatically show last X messages where X<=5
+5. Channel LAST (previous) messages now append an ellapsed time since the message was sent.
+ 
